--- a/src/App.css
+++ b/src/App.css
@@ -1,93 +1,91 @@
-
-
-body{
-font-family: 'Spartan', sans-serif;
-
+body {
+  font-family: "Spartan", sans-serif;
 }
 
-.call-to-action{
-    width: 100%;
-    height: 780px;
-    background-image:url(/images/cta-bg-img.png);
-    background-position: 80px 0;
-    background-size: 95%;
-    background-repeat: no-repeat; 
+.call-to-action {
+  width: 100%;
+  height: 780px;
+  background-image: url(/images/cta-bg-img.png);
+  background-position: 80px 0;
+  background-size: 95%;
+  background-repeat: no-repeat;
 }
 
-.cta-txt{
- width: 700px;
- top: 200px;   
+.cta-txt {
+  width: 700px;
+  top: 200px;
 }
-.main-head-txt{
-    font-weight: 400;
-    line-height: 80px;
-
-}
-
-#cta-content1::after{
-    content: "\a";
-    white-space: pre;
-}
-#cta-content2::after{
-    content: "\a";
-    white-space: pre;
+.main-head-txt {
+  font-weight: 400;
+  line-height: 80px;
 }
 
-.btn-txt{
-    font-weight:400;
-    letter-spacing: 0.1em;
+#cta-content1::after {
+  content: "\a";
+  white-space: pre;
 }
-.cta-img{
-    margin-top: -180px;
-    margin-left: auto;
-    z-index: -1;
-}
-
-#about-us{
- background-color: white;
- width: 100%;
- height: auto;
- z-index: 10;
+#cta-content2::after {
+  content: "\a";
+  white-space: pre;
 }
 
-.middle-container{
+.btn-txt {
+  font-weight: 400;
+  letter-spacing: 0.1em;
+}
+.btn-txt:focus:active {
+  outline: none;
+}
+.cta-img {
+  margin-top: -180px;
+  margin-left: auto;
+  z-index: -1;
+}
+
+
+#about-us {
+  background-color: white;
+  width: 100%;
+  height: auto;
+  z-index: 10;
+}
+
+.middle-container {
   max-width: 100%;
 }
-.place-txt-head{
-   letter-spacing: -0.025em;
+.place-txt-head {
+  letter-spacing: -0.025em;
 }
 
-.place-txt{
- width: 700px;
- font-size: xx-large;
+.place-txt {
+  width: 700px;
+  font-size: xx-large;
 }
 
-.place-txt1::after{
-    content: "\a";
-    white-space: pre;
+.place-txt1::after {
+  content: "\a";
+  white-space: pre;
 }
 
-.rectangular-bg{
-    width: 65%;
-    position: absolute;
-    left: -130px;
-    margin-top: 190px;
-    opacity: 0.6;
+.rectangular-bg {
+  width: 65%;
+  position: absolute;
+  left: -130px;
+  margin-top: 190px;
+  opacity: 0.6;
 }
-.rec-gathering{
-    position: absolute;
-    top: 0px;
-    width: 98%;
-    left: -200px;
-    z-index: -1;
+.rec-gathering {
+  position: absolute;
+  top: 0px;
+  width: 98%;
+  left: -200px;
+  z-index: -1;
 }
 
-.line-group{
-  
-    height: 2px;
-   
+.line-group {
+  height: 2px;
 }
-.lines{
+.lines {
   height: 2px;
   width: 150px;
   margin: 48px;
@@ -96,77 +94,192 @@ font-family: 'Spartan', sans-serif;
   transition: background-color 0.6s ease;
 }
 
-
-.reserve-bg-img{
-background-image: url(/images/reserve-bg-img.jpg);
-background-repeat: no-repeat;
-background-size: cover;
-background-position: 0 -200px;
+.reserve-bg-img {
+  background-image: url(/images/reserve-bg-img.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 0 -200px;
 }
 
 /* ...........................Slideshow.......................... */
 
 each-fade {
-    display: flex;
-  }
-   
-  .each-fade .image-container {
-    width: 75%;
-    overflow: hidden;
-  }
-   
-  .each-fade .image-container img {
-    width: 100%;
-  }
-   
-  .each-fade h2 {
-    width: 25%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-    background: #adceed;
-  }
+  display: flex;
+}
+
+.each-fade .image-container {
+  width: 75%;
+  overflow: hidden;
+}
+
+.each-fade .image-container img {
+  width: 100%;
+}
+
+.each-fade h2 {
+  width: 25%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  background: #adceed;
+}
 
 @keyframes switch-txt {
-    from {opacity: 0.4;}
-    to {opacity: 1;}
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.events-txt1 {
+  opacity: 0.4;
+  animation-name: switch-txt;
+  animation-duration: 5s;
+  animation-timing-function: linear;
+  animation-delay: 0s;
+  animation-iteration-count: infinite;
+  animation-play-state: running;
+}
+
+.events-txt2 {
+  opacity: 0.4;
+  animation-name: switch-txt;
+  animation-duration: 5s;
+  animation-timing-function: linear;
+  animation-delay: 10s;
+  animation-iteration-count: infinite;
+  animation-play-state: running;
+}
+
+.events-txt3 {
+  opacity: 0.4;
+  animation-name: switch-txt;
+  animation-duration: 5s;
+  animation-timing-function: linear;
+  animation-delay: 15s;
+  animation-iteration-count: infinite;
+  animation-play-state: running;
+}
+
+.highlighted {
+  color: black;
+  opacity: 1;
+  transition-duration: 0.1s;
+}
+
+.book-bg-img {
+  background-image: url(/images/reserve-bg-img.jpg);
+  background-repeat: no-repeat;
+  background-position: 0px -500px;
+  overflow: hidden;
+  -webkit-background-size: cover;
+    background-size: cover;
+}
+
+.input {
+  background-color: transparent;
+  border: none !important;
+  border-bottom: 1px solid #555 !important;
+  border-width: 0 0 1px 0;
+  color: #555;
+  box-sizing: border-box;
+  padding: 10px 0px;
+  position: relative;
+  width: 100%;
+  outline: none;
+
+    &:focus {
+    outline: none;
+  }
+}
+
+input::-webkit-input-placeholder {
+  color: #555 ;
+}
+
+input:focus::-webkit-input-placeholder {
+  color: #a08069;
+}
+
+.input:focus + .underline {
+  transform: scale(1);
+}
+
+.underline {
+  background-color:#a08069;
+  display: inline-block;
+  height: 2px;
+  position: absolute;
+  margin-top: 60px;
+  margin-left: -384px;
+  -webkit-transform: scale(0, 1);
+  transform: scale(0, 1);
+  -webkit-transition: all 0.5s linear;
+  transition: all 0.5s linear;
+  width: 385px;
+}
+input::-webkit-input-placeholder {
+  color: #aaa;
+}
+
+input:focus::-webkit-input-placeholder {
+  color: #a08069;
+}
+
+.input:focus + .underline {
+  transform: scale(1);
 }
 
 
-  .events-txt1 {
-    opacity: 0.4;
-    animation-name: switch-txt;
-    animation-duration: 5s; 
-    animation-timing-function: linear; 
-    animation-delay: 0s;
-    animation-iteration-count: infinite;
-    animation-play-state: running; 
+.input-date{
+  background-color: transparent;
+  border: none !important;
+  border-bottom: 1px solid #555 !important;
+  border-width: 0 0 1px 0;
+  color: #555;
+  box-sizing: border-box;
+  padding: 10px 5px 0px;
+  position: relative; 
+  outline: none;
+  letter-spacing: 2px;
+  font-size: 1.5rem;
+  width: 235px !important;
+
+  &.input-date:focus {
+    outline:none;
+  }
+}
+input-date::-webkit-input-placeholder {
+  color: #aaa;
+  text-transform:uppercase !important;
+}
+
+.input-label{
+  color: #aaa;
+  padding: 15px 0px;
+  width: 10rem;
+}
+
+
+.glyphicon {
+		color: black;
+  }
+  
+  .img-rec{
+    transform: rotateX(-180deg);
+      width: 75%;
+      left:-150px;
+      top:-5px;
+      margin: 0;
+      z-index: -2;
   }
 
-  .events-txt2 {
-    opacity: 0.4;
-    animation-name: switch-txt;
-    animation-duration: 5s; 
-    animation-timing-function: linear; 
-    animation-delay: 10s;
-    animation-iteration-count: infinite;
-    animation-play-state: running; 
-  }
-
-  .events-txt3 {
-        opacity: 0.4;
-        animation-name: switch-txt;
-        animation-duration: 5s; 
-        animation-timing-function: linear; 
-        animation-delay: 15s;
-        animation-iteration-count: infinite;
-        animation-play-state: running; 
-  }
-
-  .highlighted{
-    color: black;
-    opacity: 1;
-    transition-duration: 0.1s;
-
+  .rec-lines{
+    width: 10%;
+    right: 650px;
+    bottom: -130px;
+    z-index: -1;
   }
