--- a/src/components/FamilyGathering/FamilyGatheringStyles.scss
+++ b/src/components/FamilyGathering/FamilyGatheringStyles.scss
@@ -1,25 +1,24 @@
 .family-gathering {
-  height: 900px;
   width: 100%;
+  height: 110vh;
   display: flex;
   justify-content: center;
-  color: var(--ebonyClay);
   position: relative;
 }
 
-.beaver-lines {
+.beaver-lines__fg {
   position: absolute;
-  width: 150px;
-  left: -440px;
-  top: -275px;
+  width: 15rem;
+  top: 10rem;
+  left: 12rem;
+  z-index: 4;
 }
 
 .slides-container {
   position: relative;
-  display: flex;
-  width: 540px;
-  right: 230px;
-  top: 150px;
+  width: 50rem;
+  z-index: 2;
+  top: 15%;
 }
 .gray-vector-slideshow-bg {
   width: 1050px;
@@ -31,89 +30,85 @@
   left: -100px;
 }
 .img-slide {
+  box-shadow: 2rem 5rem 4rem rgba(0, 0, 0, 0.1);
   position: absolute;
-  box-shadow: 20px 50px 40px rgba(0, 0, 0, 0.1);
 }
 
 .family-events-text-box {
   color: var(--ebonyClay);
   position: relative;
-  width: 100px;
-  top: 250px;
-  right: 120px;
+  width: 40%;
+  top: 20%;
 }
 
-.event-text {
+.fg_btn {
   position: absolute;
-  width: 350px;
-}
-.event-text h2 {
-  font-size: 2rem;
-  font-weight: 700;
-}
-
-.event-text p {
-  margin-top: 10px;
-  width: 480px;
-  font-size: 1.2rem;
-}
-
-.family-gathering .custom-btn {
-  position: absolute;
-  top: 480px;
-  right: 400px;
+  top: 40rem;
+  right: 47.5rem;
 }
 .event-names {
-  width: 250px;
+  width: 25rem;
   position: absolute;
   font-size: 14px;
-  bottom: 200px;
-  right: 400px;
+  bottom: 20rem;
+  right: 44rem;
   text-transform: uppercase;
   letter-spacing: 2px;
   font-weight: 700px;
 }
 
+.event-text {
+  font-weight: 500;
+  color: var(--ebonyClay);
+  position: absolute;
+  margin-left: 10rem;
+
+  p {
+    margin-top: 3rem;
+  }
+}
+
 .event-txt {
-  padding-top: 30px;
-  font-weight: 700;
+  top: 10rem;
+  margin-top: 3rem;
 }
 
 .indicator-lines-cont {
   width: 100px;
   z-index: 5;
   position: absolute;
-  top: 585px;
-  right: 670px;
+  top: 48.5rem;
+  right: 71rem;
 }
 
 .indicator-line1 {
-  width: 140px;
+  position: absolute;
+  width: 20rem;
   margin-top: 0px;
 }
 .indicator-line2 {
   position: absolute;
-  width: 100px;
-  margin-top: 50px;
+  width: 20rem;
+  margin-top: 5rem;
 }
 .indicator-line3 {
   position: absolute;
-  width: 100px;
-  margin-top: 100px;
+  width: 20rem;
+  margin-top: 10rem;
 }
 
 .event-txt-light {
   width: 250px;
   position: absolute;
-  font-size: 14px;
-  bottom: 200px;
-  right: 400px;
+  font-size: 1.4rem;
+  bottom: 20rem;
+  right: 44rem;
   text-transform: uppercase;
   letter-spacing: 2px;
 }
 
 .event-txt-light li {
-  padding-top: 30px;
+  margin-top: 3rem;
   opacity: 0.5;
   font-weight: 400;
   color: #999;
