--- a/src/components/OurMenu/OurMenuStyles.scss
+++ b/src/components/OurMenu/OurMenuStyles.scss
@@ -1,7 +1,7 @@
 .our-menu {
   background-color: black;
   width: 100%;
-  height: 850px;
+  height: 110vh;
   color: white;
   display: flex;
   justify-content: center;
@@ -9,9 +9,9 @@
 }
 
 .our-menu-text-box {
-  margin-right: 100px;
+  margin-right: 10rem;
   align-self: center;
-  transform: translateY(-50px);
+  transform: translateY(-5rem);
   z-index: 3;
 }
 
@@ -24,26 +24,28 @@
 }
 
 .our-menu-imgs-box {
-  margin-top: 180px;
-  width: 540px;
+  width: 54rem;
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  transform: translateY(5rem);
 }
 
 .menu-food {
   border-bottom: 1px solid rgba(158, 127, 102, 0.349);
   display: flex;
   flex-direction: row;
-  margin-top: 20px;
+  margin-top: 2rem;
 }
 
 .food-img {
-  width: 120px;
+  width: 13rem;
 }
 
 .line-food {
-  width: 30px;
+  width: 3.5rem;
   position: absolute;
-  margin-left: 110px;
-  margin-top: -85px;
+  transform: translate(13rem, -10rem);
 }
 
 .food-txt-box {
@@ -51,15 +53,15 @@
 }
 
 .food-header {
-  font-size: 1rem;
+  font-size: 1.8rem;
   font-weight: 700;
   margin-top: 15px;
 }
 
 .food-txt {
-  font-size: 1rem;
-  width: 380px;
-  margin-bottom: 10px;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+  margin-top: 5rem;
   line-height: 1.6;
   transform: translateY(-40px);
 }
