--- a/src/components/OurPlace/OurPlaceStyles.scss
+++ b/src/components/OurPlace/OurPlaceStyles.scss
@@ -1,7 +1,7 @@
 .our-place {
   background-color: white;
   width: 100%;
-  height: 700px;
+  height: 90vh;
   color: black;
   display: flex;
   justify-content: center;
@@ -9,29 +9,26 @@
 }
 
 .our-place-img {
-  width: 540px;
-  transform: translateY(-70px);
+  width: 40%;
   z-index: 2;
+  transform: translateY(-7rem);
 }
 
 .our-place-img img {
-  box-shadow: 20px 50px 40px rgba(0, 0, 0, 0.1);
+  box-shadow: 2rem 3rem 4rem rgba(0, 0, 0, 0.3);
 }
 .our-place-txt {
-  margin-left: 100px;
   align-self: center;
-  transform: translateY(-40px);
   z-index: 3;
-}
-
-.txt-black {
-  width: 500px;
+  color: var(--ebony-clay);
+  margin-left: 10rem;
 }
 
 .gray-vector {
-  width: 1050px;
+  width: 70%;
   z-index: 1;
   position: absolute;
   transform: translate(-420px, 200px);
   opacity: 0.5;
+  overflow-y: hidden;
 }
