--- a/src/pages/Booking/BookingStyles.scss
+++ b/src/pages/Booking/BookingStyles.scss
@@ -1,6 +1,6 @@
 .booking-container {
   width: 100%;
-  height: 820px;
+  height: 120vh;
   background-image: url(/images/reserve-bg-img.jpg);
   background-repeat: no-repeat;
   background-position: 0px -600px;
@@ -20,8 +20,8 @@
 
 .reserve-info-container .header {
   margin-top: 130px;
-  margin: 50px 0;
-  width: 600px;
+  margin: 5rem 0;
+  width: 60rem;
 }
 
 .booking-container .header {
@@ -29,8 +29,8 @@
 }
 
 .reserve-txt {
-  width: 480px;
-  margin-top: 20px;
+  width: 48rem;
+  margin-top: 2rem;
 }
 
 .card-container {
