--- a/src/components/FamilyGathering/FamilyGatheringStyles.scss
+++ b/src/components/FamilyGathering/FamilyGatheringStyles.scss
@@ -4,6 +4,13 @@
   display: flex;
   justify-content: center;
   position: relative;
+
+  @include respond(tab-land) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 90vh;
+  }
 }
 
 .beaver-lines__fg {
@@ -12,6 +19,11 @@
   top: 10rem;
   left: 12rem;
   z-index: 4;
+
+  @include respond(tab-land) {
+    left: 10rem;
+    top: 10rem;
+  }
 }
 
 .slides-container {
@@ -19,7 +31,24 @@
   width: 50rem;
   z-index: 2;
   top: 15%;
+
+  @include respond(tab-land) {
+    display: none;
+  }
 }
+
+.slides-container-tab {
+  display: none;
+
+  @include respond(tab-land) {
+    width: 100%;
+    display: flex;
+    position: absolute;
+    top: 0;
+    left: 15%;
+  }
+}
+
 .gray-vector-slideshow-bg {
   width: 1050px;
   z-index: -1;
@@ -28,10 +57,22 @@
   opacity: 0.5;
   top: -200px;
   left: -100px;
+
+  @include respond(tab-land) {
+    transform: translate(-55rem, 20rem);
+  }
 }
+
 .img-slide {
   box-shadow: 2rem 5rem 4rem rgba(0, 0, 0, 0.1);
   position: absolute;
+
+  @include respond(tab-land) {
+    width: 70%;
+    top: 15rem;
+    margin: 0 auto;
+    box-shadow: 2rem 4rem 6rem rgba(0, 0, 0, 0.2);
+  }
 }
 
 .family-events-text-box {
@@ -39,12 +80,31 @@
   position: relative;
   width: 40%;
   top: 20%;
+
+  @include respond(tab-land) {
+    display: block;
+    left: 27%;
+    top: 15%;
+    text-align: center;
+    width: 100%;
+  }
 }
 
 .fg_btn {
   position: absolute;
   top: 40rem;
   right: 47.5rem;
+
+  @include respond(tab-land) {
+    top: 85%;
+    transform: translateX(50%);
+    width: 30%;
+  }
+}
+
+.indicator {
+  display: flex;
+  justify-content: center;
 }
 .event-names {
   width: 25rem;
@@ -55,9 +115,25 @@
   text-transform: uppercase;
   letter-spacing: 2px;
   font-weight: 700px;
+
+  @include respond(tab-land) {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 80rem;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+    position: absolute;
+  }
 }
 
-.event-text {
+.bold-event-text {
+  font-weight: 700;
+  opacity: 1;
+}
+
+.event-text2 {
   font-weight: 500;
   color: var(--ebonyClay);
   position: absolute;
@@ -66,11 +142,23 @@
   p {
     margin-top: 3rem;
   }
+
+  @include respond(tab-land) {
+    margin-left: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 .event-txt {
   top: 10rem;
   margin-top: 3rem;
+
+  @include respond(tab-land) {
+    display: inline;
+  }
 }
 
 .indicator-lines-cont {
@@ -79,22 +167,56 @@
   position: absolute;
   top: 48.5rem;
   right: 71rem;
+
+  @include respond(tab-land) {
+    width: 15rem;
+    top: 70.6rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    right: 0;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+    position: absolute;
+  }
 }
 
 .indicator-line1 {
   position: absolute;
   width: 20rem;
   margin-top: 0px;
+
+  @include respond(tab-land) {
+    position: relative;
+    width: 10rem;
+    margin-left: -28rem;
+  }
 }
 .indicator-line2 {
   position: absolute;
   width: 20rem;
   margin-top: 5rem;
+
+  @include respond(tab-land) {
+    position: relative;
+    width: 10rem;
+    margin-top: 0;
+    margin-left: 4rem;
+  }
 }
 .indicator-line3 {
   position: absolute;
   width: 20rem;
   margin-top: 10rem;
+
+  @include respond(tab-land) {
+    position: relative;
+    width: 10rem;
+    margin-left: 35rem;
+    margin-top: 0;
+  }
 }
 
 .event-txt-light {
@@ -105,6 +227,20 @@
   right: 44rem;
   text-transform: uppercase;
   letter-spacing: 2px;
+
+  @include respond(tab-land) {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 80rem;
+    top: 65rem;
+    right: 0;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+    position: absolute;
+  }
 }
 
 .event-txt-light li {
