--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -38,3 +38,10 @@
     clear: both;
   }
 }
+
+@mixin centerfix {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
