--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -3,6 +3,11 @@
   line-height: 1.1;
   font-weight: 300;
   letter-spacing: 1.4px;
+
+  @include respond(tab-land) {
+    font-size: 5.5rem;
+    line-height: 1.3;
+  }
 }
 
 .text__main {
@@ -10,14 +15,27 @@
   font-weight: 400;
   line-height: 1.6;
   letter-spacing: 1.4;
+
+  @include respond(tab-land) {
+    font-size: 1.8rem;
+    line-height: 1.6;
+  }
 }
 
 .margin__top {
   margin-top: 5rem;
+
+  @include respond(tab-land) {
+    margin-top: 3rem;
+  }
 }
 
-.margin__bottom{
+.margin__bottom {
   margin-bottom: 5rem;
+
+  @include respond(tab-land) {
+    margin-top: 3rem;
+  }
 }
 
 .header__secondary {
