--- a/src/components/Footer/FooterStyles.scss
+++ b/src/components/Footer/FooterStyles.scss
@@ -16,6 +16,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    @include respond(phone) {
+      font-size: 1.4rem;
+    }
   }
 
   .address {
@@ -23,10 +27,19 @@
       margin: 0;
       top: 0;
     }
+
+    @include respond(phone) {
+      text-align: center;
+    }
   }
   .open-times {
     @include respond(tab-land) {
       margin-left: 10rem;
+    }
+
+    @include respond(phone) {
+      margin: 0;
+      text-align: center;
     }
   }
 }
@@ -41,5 +54,11 @@
     left: 10rem;
     top: 10rem;
     position: absolute;
+  }
+
+  @include respond(phone) {
+    position: relative;
+    left: 0;
+    top: 0;
   }
 }
