--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -43,4 +43,9 @@
   font-weight: 700;
   letter-spacing: 1px;
   line-height: 1.2;
+
+  @include respond(tab-land) {
+    font-size: 4rem;
+
+  }
 }
