fixed gathering section text slide

--- a/src/components/FamilyGathering/FamilyGatheringStyles.scss
+++ b/src/components/FamilyGathering/FamilyGatheringStyles.scss
@@ -117,8 +117,8 @@
 
 .fg_btn {
   position: absolute;
-  top: 40rem;
-  right: 47.5rem;
+  top: 44rem;
+  right: 52.5rem;
 
   @include respond(tab-land) {
     top: 85%;
@@ -140,8 +140,8 @@
   width: 25rem;
   position: absolute;
   font-size: 14px;
-  bottom: 20rem;
-  right: 44rem;
+  bottom: 28.5rem;
+  right: 49rem;
   text-transform: uppercase;
   letter-spacing: 2px;
   font-weight: 700px;
@@ -177,20 +177,26 @@
 }
 
 .event-txt {
-  top: 10rem;
-  margin-top: 3rem;
+  margin-top: 4rem;
+  font-size: 1.8rem;
+  font-weight: 700;
 
   @include respond(tab-land) {
     display: inline;
   }
 }
 
+.event-txt:after {
+  content: "";
+  font-weight: 400;
+  opacity: 1;
+}
 .indicator-lines-cont {
   width: 100px;
   z-index: 5;
   position: absolute;
-  top: 48.5rem;
-  right: 71rem;
+  top: 55.5rem;
+  right: 75rem;
 
   @include respond(tab-land) {
     top: 60.5%;
@@ -209,9 +215,13 @@
   }
 }
 
+.indicator-lines-horizontal {
+  display: none;
+}
+
 .indicator-line1 {
   position: absolute;
-  width: 20rem;
+  width: 25rem;
   margin-top: 0px;
 
   @include respond(tab-land) {
@@ -222,8 +232,8 @@
 }
 .indicator-line2 {
   position: absolute;
-  width: 20rem;
-  margin-top: 5rem;
+  width: 25rem;
+  margin-top: 6rem;
 
   @include respond(tab-land) {
     width: 10rem;
@@ -232,8 +242,8 @@
 }
 .indicator-line3 {
   position: absolute;
-  width: 20rem;
-  margin-top: 10rem;
+  width: 25rem;
+  margin-top: 12rem;
 
   @include respond(tab-land) {
     width: 10rem;
@@ -273,8 +283,17 @@
 }
 
 .event-item {
-  margin-top: 3rem;
+  margin-top: 6rem;
   font-size: 1.8rem;
   font-weight: 700;
   color: #777;
+  display: none;
+
+  @include respond(tab-land) {
+    display: block;
+  }
+
+  @include respond(phone) {
+    margin-top: 3rem;
+  }
 }
